refactor: 重构部分代码